# boynton-bot

./: .env.example  .gitignore  CLAUDE.md  README.md  conftest.py  pyproject.toml
docker/: Dockerfile
scripts/: export_qwen_dpo.py
src/: app.py
src/backend/: CLAUDE.md  agent.py  cron.py  database.py  heartbeat.py  job_queue.py  memory.py  settings_api.py
src/backend/db/: 0002_add_tool_calls.sql  0004_add_cron_jobs.sql  0005_add_training_examples.sql  0006_add_message_model.sql  0007_training_examples_survive_clear.sql  0008_drop_hidden_flag.sql  0009_add_training_examples_updated_at.sql  CLAUDE.md  schema.sql
src/backend/tests/: conftest.py  test_agent_integration.py  test_context_length_retry.py  test_correction_tool_safety.py  test_cron.py  test_priority.py  test_streaming.py  test_training_examples.py
src/backend/tools/: CLAUDE.md  bash_tool.py  cron_tools.py  datetime_tool.py  email_tool.py  fetch_tool.py  memory_tools.py  registry.py
src/backend/tools/tests/: test_bash_tool.py  test_cron_tools.py  test_email_tool.py  test_fetch_tool.py  test_memory_tools.py  test_registry.py
src/frontend/: CLAUDE.md  index.html  package-lock.json  package.json  vite.config.js
src/frontend/src/: App.svelte
src/frontend/src/components/: ChatInput.svelte  Feedback.svelte  Message.svelte  MessageList.svelte  MessageParts.svelte  ToolCall.svelte
src/frontend/src/lib/: messageHistory.js  messageHistory.ts  router.svelte.ts  types.ts  uiPrefs.svelte.ts
src/frontend/src/pages/: ChatPage.svelte  FeedbackPage.svelte  SettingsPage.svelte
