[project]
name = "boynton-bot"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "croniter",
    "fastapi",
    "uvicorn[standard]",
    "httpx>=0.28.1",
    "openai",
    "psycopg[binary,pool]>=3.3.4",
    "python-dotenv",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
testpaths = ["src"]
pythonpath = ["src"]
